Amends so that Redis behaves better

--- a/csrf.conf
+++ b/csrf.conf
@@ -3,14 +3,6 @@ server {
 	listen 80;	
 	root /root/to/your/docroot;
 
-	# Tell IE users with Chrome frame to use it
-	add_header X-UA-Compatible 'IE=edge,chrome=1';
-	add_header X-dns-prefetch-control 'on';
-	add_header Access-Control-Allow-Origin '*';
-	add_header X-Frame-Options DENY;
-
-	keepalive_timeout 5s;
-
 	proxy_redirect off;
 	proxy_intercept_errors on;
 	proxy_set_header Host $host;
@@ -54,80 +46,86 @@ server {
 
 	location @backend {
 		# You can't set variables in nginx dynamically, so set this up as empty first
-		set $generated_token "";
-
-		# We set a default of OK for CSRF
-		set $csrf_validate 200;
-		if ($request_method = POST) {
-			access_by_lua 
-			'
-			if ngx.var.cookie_csrf then
+		set $csrf_validate "";
+		access_by_lua 
+		'
+        if ngx.req.get_method() == "POST" then
+        	-- set up forbidden as default
+        	ngx.var.csrf_validate = ngx.HTTP_FORBIDDEN
+        	if ngx.var.cookie_csrf then
 				local res = ngx.location.capture("/validate-csrf")
-				ngx.var.csrf_validate = res.status
-			else
-				-- no cookie present, do not bother with subrequest
-				ngx.var.csrf_validate = ngx.HTTP_NOT_FOUND
-			end
-            ';
-		}
-		# Pass the result as a header to the backend
-		proxy_set_header X-Csrf $csrf_validate;
+				if ngx.HTTP_OK == res.status then
+	       			ngx.req.read_body()
+	    			local args = ngx.req.get_post_args()
+	    			local posted_token = tostring(args["csrf"])
+	    			if posted_token == res.body then
+	    				ngx.var.csrf_validate = ngx.HTTP_OK
+	    			end
+	    		end
+	    	end
+    	end
+    	';
 
+		# Pass the result as a header to the backend
+		proxy_set_header X-Csrf-Valid $csrf_validate;
+		
 		proxy_pass http://127.0.0.1:6081;
 
 		# Now filter the response from the backend in as lightweight way as possible
+		set $csrf_form_token "";
+		set $csrf_cookie_token "";
+
 		header_filter_by_lua
 		'
 		if ngx.var.upstream_http_x_set_csrf then
 			-- the backend requested a CSRF token be set
-			local generated_token = nil
-			if ngx.var.cookie_csrf and ngx.HTTP_OK == ngx.var.csrf_validate then
-				-- they had a valid cookie, just re-use it
-				local generated_token = ngx.var.cookie_csrf
+			local csrf_cookie_token = nil
+			if ngx.var.cookie_csrf then
+				-- they have a cookie, just re-use it
+				local csrf_cookie_token = ngx.var.cookie_csrf
 			end
-			if not generate_token then
+
+			local resty_random = require "resty.random"
+			local str = require "resty.string"
+
+			if not csrf_cookie_token then
 				-- no valid csrf cookie found, let us make one
-				local rocks = require "luarocks.loader"
-				local resty_random = require "resty.random"
-				local str = require "resty.string"
+				
+				local cookie_random = resty_random.bytes(16,true)
 
-				local strong_random = resty_random.bytes(16,true)
-
-				while strong_random == nil do
+				while cookie_random == nil do
 					-- attempt to generate 16 bytes of
 	    			-- cryptographically strong (enough) random data
-	    			strong_random = resty_random.bytes(16,true)
+	    			cookie_random = resty_random.bytes(16,true)
 				end
 
-				generated_token = str.to_hex(strong_random)
+				ngx.var.csrf_cookie_token = str.to_hex(cookie_random)
 			end
 
 			-- we are about to mess around with the content of the page
 			-- so we need to clear this as it will be wrong
 			ngx.header.Content_Length = ""
 			-- set the Cookie for the CSRF token
-			ngx.header.Set_Cookie = "csrf=" .. generated_token
+			ngx.header.Set_Cookie = "csrf=" .. ngx.var.csrf_cookie_token
 
-			-- set this so that we can use this in the body filter
-			ngx.var.generated_token = generated_token
+			-- now generate one for the form token
+			while form_random == nil do
+	    		form_random = resty_random.bytes(16,true)
+			end
+
+			ngx.var.csrf_form_token = str.to_hex(form_random)
+			-- save these two random numbers as key-value pairs in Redis
+			local redis = require "redis"
+			local client = redis.connect("127.0.0.1", 6379) -- change as appropriate
+			client:set("csrf_" .. ngx.var.csrf_cookie_token, ngx.var.csrf_form_token)
 		end
 		';
 
-		# Parse the body for a csrf placeholder(s) and replace them with the cookie
+		# Parse the body for csrf placeholder(s) and replace them with a hash
 		body_filter_by_lua
 		'
-		if ngx.var.generated_token then
-			ngx.arg[1] = ngx.re.gsub(ngx.arg[1], "::csrf::", ngx.var.generated_token)
-		end
-		';
-
-		log_by_lua
-		'
-		if ngx.var.generated_token then
-			-- we generated a token, let us store it
-			local redis = require "redis"
-			local client = redis.connect("127.0.0.1", 6379)
-			client:set("csrf_" .. ngx.var.generated_token, os.time())
+		if ngx.var.csrf_form_token then
+			ngx.arg[1] = ngx.re.gsub(ngx.arg[1], "::csrf::", ngx.var.csrf_form_token)
 		end
 		';
 	}
